--- a/wxNews-vue/package.json
+++ b/wxNews-vue/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.7.2",
+    "echarts": "^5.5.1",
     "element-plus": "^2.7.6",
     "pinia": "^2.1.7",
     "pinia-persistedstate-plugin": "^0.1.0",
